basic controllers created, EasyAdmin configured at 50%, gitignore updated

--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modifier Profil{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>Modifier Profil</h1>
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
