--- a/templates/bundles/EasyAdminBundle/welcome.html.twig
+++ b/templates/bundles/EasyAdminBundle/welcome.html.twig
@@ -4,5 +4,5 @@
 {% block page_title 'Bienvenue dans l\'administration de Mystery Board!' %}
 
 {% block page_content %}
- <a class="btn btn-primary"></a>
+ <a class="btn btn-primary" href="{{ path("home") }}">Retour au site</a>
 {% endblock %}
