--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,13 @@
+body p, h2, a {
+    font-size: 200%;
+}
+
 .card {
     border: 1px solid black;
     border-radius: 3px;
     cursor: pointer;
+}
+
+h1 {
+    font-size: 500%;
 }
