storyController improved to make stories working, add of a button te reset the story savefor a user

--- a/templates/bundles/EasyAdminBundle/welcome.html.twig
+++ b/templates/bundles/EasyAdminBundle/welcome.html.twig
@@ -1,7 +1,7 @@
 {# @var ea \EasyCorp\Bundle\EasyAdminBundle\Context\AdminContext #}
 {% extends '@EasyAdmin/page/content.html.twig' %}
 
-{% block page_title 'Bienvenue dans l\'administration de Mystery Board!' %}
+{% block page_title 'Bienvenue dans l\'administration de DRAWER!' %}
 
 {% block page_content %}
  <a class="btn btn-primary" href="{{ path("home") }}">Retour au site</a>
