--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div>
-        <h1 class="text-center">Bienvenue</h1>
+        <h1 class="text-center">Bienvenue sur DRAWER</h1>
         {% if app.user == "" %}
             <a class="nav-link text-uppercase text-expanded" href="{{ path("app_login") }}">Se connecter</a>
             <p>Connectez-vous pour accéder aux histoires</p>
