--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,30 @@
+@font-face {
+    font-family: 'imprimerieregular';
+    src: url('fonts/imprimerie-webfont.woff2') format('woff2'),
+         url('fonts/imprimerie-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+/* @font-face {
+    font-family: 'imprimeriebold';
+    src: url('font/imprimerie-bold-webfont.woff2') format('woff2'),
+         url('font/imprimerie-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+} */
+
 body {
     background-color: black;
-    color: white;
+    color: lightgrey;
+    /* font-family: 'imprimerieregular'; */
 }
 
 
-body p, h2, a {
-    font-size: 180%;
+h2, p {
+    font-size: 170%;
 }
 
 .card {
@@ -16,15 +35,19 @@ body p, h2, a {
 
 h1 {
     color: white;
-    font-size: 500%;
+    font-size: 350%;
 }
 
 h3 {
-    font-size: 170%;
+    font-size: 150%;
     line-height: 130%;
 }
 
-.description {
+h4 {
+    font-size: 110%;
+}
+
+/* .description {
     color: red;
     font-size: 200%;
-}
+} */
