--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,17 +4,18 @@
 
 {% block body %}
     <div>
-        <h1 class="text-center">Bienvenue sur StoryDrawer</h1>
         {% if app.user == "" %}
-            <a class="btn btn-primary m-3" href="{{ path("app_login") }}"><h2>Se connecter</h2></a>
-            <p class="m-3">Connectez-vous pour accéder aux histoires</p>
+            <h1 class="text-center">Bienvenue sur StoryDrawer</h1>
+            <a class="btn btn-primary m-3" href="{{ path("app_login") }}"><h3>Se connecter</h3></a>
+            <p class="m-3">Connectez-vous pour accéder aux histoires. Nous n'utilisons vos données qu'afin de sauvegarder vos avancées, et de customiser votre compte lorsque vous le souhaitez.</p>
         {% else %}
             <div class="m-3 text-right">
-                <a class="btn btn-danger" href="{{ path("app_logout") }}"><h2>Se déconnecter</h2></a>
+                <a class="btn btn-danger" href="{{ path("app_logout") }}"><h3>Se déconnecter</h3></a>
                 {% if is_granted('ROLE_ADMIN') %}
-                    <a class="btn btn-warning text-white" href="{{ path("admin") }}"><h2>Espace admin</h2></a>
+                    <a class="btn btn-warning text-white" href="{{ path("admin") }}"><h3>Admin</h3></a>
                 {% endif %}
             </div>
+            <h1 class="text-center">Bienvenue sur StoryDrawer</h1>
             <div class="m-3 text-center">
                 <a class="btn btn-success" href="{{ path("story_index") }}" style="margin-top: 10%">
                     <h2>Accéder aux histoires</h2>
