--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,20 +6,24 @@
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
-    <a class="nav-link text-uppercase text-expanded" href="{{ path("home") }}">Accueil</a>
+    <div class="my-2 col-md-3">
+        <a class="btn btn-warning" href="{{ path("home") }}">Accueil</a>
 
-    <h1>Créer son compte</h1>
+        <h3 class="mt-3">Créer son compte</h3>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email, {
-            label: 'Email'
-        }) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms, {
-            label: 'Accepter les termes'
-        }) }}
-        <button type="submit" class="btn">S'enregistrer</button>
-    {{ form_end(registrationForm) }}
+        {{ form_start(registrationForm) }}
+            {{ form_row(registrationForm.email, {
+                label: 'Email'
+            }) }}
+            {{ form_row(registrationForm.password, {
+                label: 'Mot de passe'
+            }) }}
+            {{ form_row(registrationForm.agreeTerms, {
+                label: 'Accepter les termes'
+            }) }}
+            <button type="submit" class="btn btn-lg btn-primary">S'enregistrer</button>
+        {{ form_end(registrationForm) }}
+        <h3 class="mt-5">Déjà un compte?</h3>
+        <a href=" {{ path('app_login')}} " class="btn btn-lg btn-primary">Connectez vous</a>
+    </div>
 {% endblock %}
