add UserEndingStepsRecords, update of lg-front, add of vichUploaderBundle to add files in final steps

--- a/templates/bundles/EasyAdminBundle/crud/form_theme.html.twig
+++ b/templates/bundles/EasyAdminBundle/crud/form_theme.html.twig
@@ -248,7 +248,7 @@
             </div>
 
             {% if form.delete is defined %}
-                {{ form_row(form.delete, { label: 'form.label.delete'|trans({}, 'VichUploaderBundle') }) }}
+                {{ form_row(form.delete, { label: 'Effacer l\'image'|trans({}, 'VichUploaderBundle') }) }}
             {% endif %}
         </div>
         <div class="small" id="{{ form.file.vars.id }}_new_file_name"></div>
@@ -295,7 +295,7 @@
             </div>
 
             {% if form.delete is defined %}
-                {{ form_row(form.delete, { label: 'form.label.delete'|trans({}, 'VichUploaderBundle') }) }}
+                {{ form_row(form.delete, { label: 'Effacer l\'image'|trans({}, 'VichUploaderBundle') }) }}
             {% endif %}
         </div>
         <div class="small" id="{{ form.file.vars.id }}_new_file_name"></div>
