--- a/templates/story/index.html.twig
+++ b/templates/story/index.html.twig
@@ -3,21 +3,20 @@
 {% block title %}Story index{% endblock %}
 
 {% block body %}
-    <div class="container-fluid">
-
-    <h1 class="text-center">Histoires</h1>
-    <a class="btn btn-warning text-white mb-3" href="{{ path('home') }}"><h2>Accueil</h2></a>
-    {% for story in stories %}
-        <a class="card btn" href=" {{ path('story_show', {'story_id': story.id, 'user_id': user.id}) }} ">
+    <div class="container-fluid col-md-6">
+        <h1 class="text-center">Histoires</h1>
+        <a class="btn btn-warning text-white mb-3" href="{{ path('home') }}"><h2>Accueil</h2></a>
+        {% for story in stories %}
+            <a class="card btn bg-light" href=" {{ path('story_show', {'story_id': story.id, 'user_id': user.id}) }} ">
+                <div>
+                    <h2 class="font-weight-bold">{{ story.title }}</h2>
+                    <p>{{ story.description }}</p>
+                </div>
+            </a>
+        {% else %}
             <div>
-                <h2 class="font-weight-bold">{{ story.title }}</h2>
-                <p>{{ story.description }}</p>
+                <p class="text-center" style="margin-top: 10%">Pas d'histoire créée</p>
             </div>
-        </a>
-    {% else %}
-        <div>
-            <p class="text-center" style="margin-top: 10%">Pas d'histoire créée</p>
-        </div>
-    {% endfor %}
+        {% endfor %}
     </div>
 {% endblock %}
