--- a/templates/story/show.html.twig
+++ b/templates/story/show.html.twig
@@ -3,16 +3,27 @@
 {% block title %}Story show{% endblock %}
 
 {% block body %}
-    <div class="container-fluid">
-        <a class="btn btn-warning my-3" href="{{ path('home') }}">
-            <h4>Accueil</h4>
-        </a>
-        <a class="btn btn-danger my-3" href="{{ path('reset_last_step', {'story_id': story.id}) }}">
-            <h4>Recommencer l'histoire</h4>
-        </a>
+    <div class="container-fluid col-md-6">
+        <div class="mt-3 mb-md-5 mb-3">
+            <a class="btn btn-warning" href="{{ path('home') }}">
+                <h4>Accueil</h4>
+            </a>
+            <a class="btn btn-danger" href="{{ path('reset_last_step', {'story_id': story.id}) }}">
+                <h4>Recommencer l'histoire</h4>
+            </a>
+        </div>
         <h1>{{story.title}}</h1>
         {% if step != "" %}
             <h3 class="text-justify">{{step.description|raw}}</h3>
+            {% if step.getFeaturedImage() != "" %}
+            <div class="row d-flex align-items-center justify-content-center">
+                <div class="my-5">
+                    <img src="{{asset('uploads/final-template-image/' ~ step.getFeaturedImage() )}}"
+                    alt="image du film {{step.getCustomId}}"
+                    style="max-width: 300px">
+                </div>
+            </div>
+            {% endif %}
             {% if step.getChoice1 != "" %}
                 <div class="row">
                     <a href="{{ path('set_last_step', {'story_id': story.id, 'custom_id': step.getChoice1}) }}" class="bg-light col-lg-6 col-xs-12 card btn">
