--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,8 +10,10 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+    <div class="container-fluid col-md-6">
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+    </div>
 
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
