--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,24 +3,39 @@
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
-    <div class="container-fluid col-md-8">
-        {% if app.user == "" %}
-            <h1 class="text-center">Bienvenue sur StoryDrawer</h1>
-            <a class="btn btn-primary m-3" href="{{ path("app_login") }}"><h3>Se connecter</h3></a>
-            <p class="m-3">Connectez-vous pour accéder aux histoires. Nous n'utilisons vos données qu'afin de sauvegarder vos avancées, et de customiser votre compte lorsque vous le souhaitez.</p>
-        {% else %}
-            <div class="m-3 text-right">
-                <a class="btn btn-danger" href="{{ path("app_logout") }}"><h3>Se déconnecter</h3></a>
-                {% if is_granted('ROLE_ADMIN') %}
-                    <a class="btn btn-warning text-white" href="{{ path("admin") }}"><h3>Admin</h3></a>
-                {% endif %}
-            </div>
-            <h1 class="text-center">Bienvenue sur StoryDrawer</h1>
-            <div class="m-3 text-center">
-                <a class="btn btn-success" href="{{ path("story_index") }}" style="margin-top: 10%">
-                    <h2>Accéder aux histoires</h2>
+    {# ========= user NOT connected ========= #}
+    {% if app.user == "" %}
+        <h1 class="text-center mb-5">Bienvenue sur StoryDrawer</h1>
+        <div class="text-center mt-5">
+            <a class="btn btn-primary m-3 col-11 col-sm-3" href="{{ path("app_login") }}">
+                <h3>Se connecter</h3>
+            </a>
+        </div>
+        <h3 class="m-3 text-justify">
+            Connectez-vous pour accéder aux histoires.
+        </h3>
+        <h3 class="m-3 text-justify">
+            Nous n'utilisons vos données qu'afin de sauvegarder vos avancées, et de customiser votre compte lorsque vous le souhaitez.
+        </h3>
+    {# =========== user connected =========== #}
+    {% else %}
+        <div class="mt-3 mb-5 text-right" style="padding-bottom: 10%">
+            <a class="btn btn-danger" href="{{ path("app_logout") }}">
+                <h3>Se déconnecter</h3>
+            </a>
+            {# ========= ADMIN ========= #}
+            {% if is_granted('ROLE_ADMIN') %}
+                <a class="btn btn-warning text-white" href="{{ path("admin") }}">
+                    <h3>Admin</h3>
                 </a>
-            </div>
-        {% endif %}
-    </div>
+            {% endif %}
+            {# ========================== #}
+        </div>
+        <h1 class="mt-5 text-center">Bienvenue sur StoryDrawer</h1>
+        <div class="m-3 text-center">
+            <a class="btn btn-success" href="{{ path("story_index") }}" style="margin-top: 10%">
+                <h2>Accéder aux histoires</h2>
+            </a>
+        </div>
+    {% endif %}
 {% endblock %}
