--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div>
-    <form method="post" class="m-2 ml-3">
+    <form method="post" class="my-2 ml-2">
         <a class="btn btn-warning" href="{{ path("home") }}">Accueil</a>
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -24,8 +24,7 @@
         <input type="password" name="password" id="inputPassword" class="form-control col-md-3" required>
 
         <input type="hidden" name="_csrf_token"
-            value="{{ csrf_token('authenticate') }}"
-        >
+            value="{{ csrf_token('authenticate') }}">
 
         {#
             Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -38,16 +37,12 @@
                 </label>
             </div>
 
-        <button class="btn btn-lg btn-primary" type="submit">
+        <button class="btn btn-lg btn-primary col-md-3" type="submit">
             Se connecter
         </button>
-        <div class="col-6 col-12-md mt-5">
-            <div class="row ">
+        <div class="d-flex flex-column mt-5">
                 <p class="">Pas encore inscrit?</p>
-            </div>
-            <div class="row ">
-                <a class="btn btn-lg btn-primary mt-2" href="register">Inscrivez-vous ici</a>
-            </div>
+                <a class="btn btn-lg btn-primary mt-2 col-md-3" href="register">Inscrivez-vous ici</a>
         </div>
     </form>
 </div>
