--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,10 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-    <div class="container-fluid col-md-6">
+
+    {{ include('nav.html.twig') }}
+
+    <div class="container-fluid col-md-6 mb-3">
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </div>
