--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,9 +3,8 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<div>
-    <form method="post" class="my-2 ml-2">
-        <a class="btn btn-warning" href="{{ path("home") }}">Accueil</a>
+<div class="row">
+    <form method="post" class="col-lg-6 col-sm-12 mb-5">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
@@ -19,9 +18,9 @@
         <h3 class="mt-3">Connectez vous</h3>
 
         <label for="inputEmail">Email</label>
-        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control col-md-3" required autofocus>
+        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
         <label for="inputPassword">Mot de passe</label>
-        <input type="password" name="password" id="inputPassword" class="form-control col-md-3" required>
+        <input type="password" name="password" id="inputPassword" class="form-control" required>
 
         <input type="hidden" name="_csrf_token"
             value="{{ csrf_token('authenticate') }}">
@@ -37,13 +36,14 @@
                 </label>
             </div>
 
-        <button class="btn btn-lg btn-primary col-md-3" type="submit">
+        <button class="btn button button-primary col-12" type="submit">
             Se connecter
         </button>
-        <div class="d-flex flex-column mt-5">
-                <p class="">Pas encore inscrit?</p>
-                <a class="btn btn-lg btn-primary mt-2 col-md-3" href="register">Inscrivez-vous ici</a>
-        </div>
     </form>
+    <div class="col-lg-6 col-sm-12">
+        <p class="">Pas encore inscrit?</p>
+        <a class="btn button button-primary mt-2 col-12" href="register">Inscrivez-vous ici</a>
+    </div>
+    
 </div>
 {% endblock %}
