--- a/templates/story/index.html.twig
+++ b/templates/story/index.html.twig
@@ -4,9 +4,8 @@
 
 {% block body %}
         <h1 class="text-center">Histoires</h1>
-        <a class="btn btn-warning text-white mb-3" href="{{ path('home') }}"><h2>Accueil</h2></a>
         {% for story in stories %}
-            <a class="card btn bg-light" href=" {{ path('story_show', {'story_id': story.id, 'user_id': user.id}) }} ">
+            <a class="btn button border" href=" {{ path('story_show', {'story_id': story.id, 'user_id': user.id}) }} ">
                 <div>
                     <h2 class="font-weight-bold">{{ story.title }}</h2>
                     <p>{{ story.description }}</p>
