--- a/templates/story/show.html.twig
+++ b/templates/story/show.html.twig
@@ -4,10 +4,7 @@
 
 {% block body %}
         <div class="mt-3 mb-md-5 mb-3">
-            <a class="btn btn-warning" href="{{ path('home') }}">
-                <h4>Accueil</h4>
-            </a>
-            <a class="btn btn-danger float-right" href="{{ path('reset_last_step', {'story_id': story.id}) }}">
+            <a class="btn button button-danger" href="{{ path('reset_last_step', {'story_id': story.id}) }}">
                 <h4>Recommencer l'histoire</h4>
             </a>
         </div>
@@ -27,14 +24,14 @@
                 <div class="row">
                     <a href="{{ path('set_last_step', {'story_id': story.id, 'custom_id': step.getChoice1}) }}" class="bg-light col-lg-6 col-xs-12 card btn">
                         <div class="p-3">
-                            <p>Choix 1:</p>
+                            <p class="text-dark">Choix 1:</p>
                             <i class="fas fa-sign-out-alt"></i>
                             <h3 class="text-justify">{{step.getLabelChoice1|raw}}</h3>
                         </div>
                     </a>
                     <a href=" {{ path('set_last_step', {'story_id': story.id, 'custom_id': step.getChoice2}) }} " class="bg-light col-lg-6 col-xs-12 card btn">
                         <div class="p-3">
-                            <p>Choix 2:</p>
+                            <p class="text-dark">Choix 2:</p>
                             <h3 class="text-justify">{{step.getLabelChoice2|raw}}</h3>
                         </div>
                     </a>
@@ -42,7 +39,7 @@
             {% else %}
                 {% if step.getCustomId != "postscriptum" %}    
                     <div class="row">
-                        <a href="{{ path('set_last_step', {'story_id': story.id, 'custom_id': "postscriptum"}) }}" class="btn btn-success m-3 ">
+                        <a href="{{ path('set_last_step', {'story_id': story.id, 'custom_id': "postscriptum"}) }}" class="btn button button-success mx-3 mb-3">
                         <h2>Post-scriptum</h2></a>
                     </div>
                 {% endif %}
