--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,17 +3,16 @@
 {% block title %}User index{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+    <h1>Utilisateurs</h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Email</th>
-                <th>Roles</th>
-                <th>Password</th>
-                <th>Last_step</th>
-                <th>actions</th>
+                {# <th class="d-lg-flex d-none">Role</th> #}
+                <th>Role</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -21,21 +20,40 @@
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
-                <td>{{ user.lastStep }}</td>
+                {# <td class="d-lg-flex d-none"> #}
                 <td>
-                    <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+                    {% if user.roles[0] == "ROLE_USER" %}
+                    Utilisateur
+                    {% elseif user.roles[0] == "ROLE_WRITER" %}
+                    Ecrivain
+                    {% elseif user.roles[0] == "ROLE_MODERATOR" %}
+                    Modérateur
+                    {% else %}
+                    Administrateur
+                    {% endif %}
+                </td>
+                <td>
+                    <a
+                    class="btn button button-success mb-lg-auto mb-xs-5"
+                    href="{{ path('user_show', {'id': user.id}) }}">
+                        Voir
+                    </a>
+                    <a
+                    class="btn button button-warning"
+                    href="{{ path('user_edit', {'id': user.id}) }}">
+                        Modifier
+                    </a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6">Pas d'utilisateurs</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('user_new') }}">Create new</a>
+    <a
+    class="btn button button-primary"
+    href="{{ path('user_new') }}">Nouvel utilisateur</a>
 {% endblock %}
