--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,36 +3,56 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+<div class="myCards">
+    <h1>Utilisateur</h1>
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
             <tr>
                 <th>Email</th>
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-            <tr>
-                <th>Last_step</th>
-                <td>{{ user.lastStep }}</td>
+                <th>Role :</th>
+                <td>
+                    {% if user.roles[0] == "ROLE_USER" %}
+                    Utilisateur
+                    {% elseif user.roles[0] == "ROLE_WRITER" %}
+                    Ecrivain
+                    {% elseif user.roles[0] == "ROLE_MODERATOR" %}
+                    Modérateur
+                    {% else %}
+                    Administrateur
+                    {% endif %}
+                </td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <div class="mb-2">
 
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
+        {% if is_granted('ROLE_ADMIN') %}
+        <a
+        class="btn button border"
+        href="{{ path('user_index') }}">
+        Liste des utilisateurs
+        </a>
+        {% endif %}
 
+        <a
+        class="btn button button-warning"
+        {% if is_granted('ROLE_ADMIN') %}
+        href="{{ path('user_edit', {'id': user.id}) }}"
+        {% endif %}>
+        Modifier
+        </a>
+    </div>
+    {% if is_granted('ROLE_ADMIN') %}
     {{ include('user/_delete_form.html.twig') }}
+    {% endif %}
+    <div class="justify-content-center btn button button-success mt-5">
+        <h2>Mes étapes effectuées</h2>
+    </div>
+</div>
+
 {% endblock %}
