--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="p-3 border rounded">
         <h1 class="text-center mb-5">Bienvenue sur StoryDrawer</h1>
-        <p class="font-weight-bold text-center">Dessinez votre histoire ou laissez votre histoire vous dessiner</p>
+        <p class="font-weight-bold text-center">Dessinez votre histoire et laissez votre histoire vous dessiner</p>
         {# ========= user NOT connected ========= #}
         {% if app.user == "" %}
             {# <div class="text-center mt-5">
