--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,21 +1,3 @@
-@font-face {
-    font-family: 'imprimerieregular';
-    src: url('fonts/imprimerie-webfont.woff2') format('woff2'),
-         url('fonts/imprimerie-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-/* @font-face {
-    font-family: 'imprimeriebold';
-    src: url('font/imprimerie-bold-webfont.woff2') format('woff2'),
-         url('font/imprimerie-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-} */
-
 body {
     background-color: black;
     color: lightgrey;
@@ -23,7 +5,30 @@ body {
     /* font-family: 'imprimerieregular'; */
 }
 
+h1 {
+    color: white;
+    font-size: 250%;
+}
+
+h2, p {
+    font-size: 170%;
+}
+
+p{
+    color: lightgrey;
+}
+
+h3 {
+    font-size: 150%;
+    line-height: 130%;
+}
+
+h4 {
+    font-size: 110%;
+}
+
 /* ====== MY BUTTONS ========= */
+
 .button{
     color: white;
     background-color: black;
@@ -61,51 +66,13 @@ body {
     cursor: pointer;
 }
 
-h1 {
-    color: white;
-    font-size: 250%;
-}
-
-h2, p {
-    font-size: 170%;
-}
-
-p{
-    color: lightgrey;
-}
-
-h3 {
-    font-size: 150%;
-    line-height: 130%;
-}
-
-h4 {
-    font-size: 110%;
-}
-
 /* .description {
     color: red;
     font-size: 200%;
 } */
 
-    /* .btn{
-        background-color: #515052;
-        padding: 10px;
-        border-radius: 5px;
-        border: none;
-    }
-
-    .btn:hover{
-        background-color: #333138;
-        padding: 10 px;
-        border-radius: 5px;
-        border: none;
-    } */
-
 .navbarImprove {
-    /* color: white; */
     background-color: black;
-    /* position: sticky; */
 }
 
 .myCards {
@@ -114,3 +81,91 @@ h4 {
     border: 1px solid white;
     border-radius: 3px;
 }
+
+/* =============== STEP IMAGES =========== */
+
+.stepImages {
+    max-width: 90%;
+    max-height: 100%;
+    margin-left: 5%;
+    image-orientation: from-image;
+}
+
+.stepBigImages {
+    /* position: absolute; */
+    /* top: 0;
+    left: 0; */
+    width: 100%;
+    height: 100%;
+    image-orientation: from-image;
+}
+
+/* OVERLAY IMAGE */
+.overlay {
+  /* Height & width depends on how you want to reveal the overlay (see script in story/show.html.twig) */   
+  height: 100%;
+  width: 0;
+
+  /* Stay in place */
+  position: fixed;
+
+  /* Sit on top */
+  z-index: 1;
+  left: 0;
+  top: 0;
+
+  /* Black fallback color */
+  background-color: rgb(0,0,0);
+
+  /* Disable horizontal scroll */
+  overflow-x: hidden;
+  
+  /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+  transition: 0.5s;
+}
+
+/* Position the content inside the overlay */
+.overlay-content {
+  position: relative;
+
+  /* 5% from the top */
+  /* top: 5%; */
+
+  /*** 100% width ***/
+  width: 100%; 
+  vertical-align: middle;
+
+  /* Centered text/links */
+  text-align: center;
+
+  /* 30px top margin to avoid conflict with the close button on smaller screens */
+  margin-top: 30px;
+}
+
+/* The navigation links inside the overlay */
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+
+  /* Display block instead of inline */
+  display: block;
+
+  /* Transition effects on hover (color) */
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+  position: absolute;
+  /* top: 5px; */
+  /* left: 15px; */
+  font-size: 60px;
+}
+
