--- a/templates/story/show.html.twig
+++ b/templates/story/show.html.twig
@@ -3,48 +3,99 @@
 {% block title %}Story show{% endblock %}
 
 {% block body %}
-        <div class="mt-3 mb-md-5 mb-3">
-            <a class="btn button button-danger" href="{{ path('reset_last_step', {'story_id': story.id}) }}">
-                <h4>Recommencer l'histoire</h4>
-            </a>
+    <div id="currentPage">
+        <div id="nav" class="sticky-top">
+            {{ include('nav.html.twig') }}
         </div>
-        <h1>{{story.title}}</h1>
-        {% if step != "" %}
-            <h3 class="text-justify">{{step.description|raw}}</h3>
-            {% if step.getFeaturedImage() != "" %}
-            <div class="row d-flex align-items-center justify-content-center">
-                <div class="my-5 justify-content-center">
-                    <img src="{{asset('uploads/final-template-image/' ~ step.getFeaturedImage() )}}"
-                    alt="image du film {{step.getCustomId}}"
-                    style="max-width: 90%; margin-left: 5%;">
-                </div>
+        <div class="container-fluid col-md-6 mb-3">
+            <div class="mt-3 mb-md-5 mb-3">
+                <a class="btn button button-danger" href="{{ path('reset_last_step', {'story_id': story.id}) }}">
+                    <h4>Recommencer l'histoire</h4>
+                </a>
             </div>
-            {% endif %}
-            {% if step.getChoice1 != "" %}
-                <div class="row">
-                    <a href="{{ path('set_last_step', {'story_id': story.id, 'custom_id': step.getChoice1}) }}" class="bg-light col-lg-6 col-xs-12 card btn">
-                        <div class="p-3">
-                            <p class="text-dark">Choix 1:</p>
-                            <i class="fas fa-sign-out-alt"></i>
-                            <h3 class="text-justify">{{step.getLabelChoice1|raw}}</h3>
-                        </div>
-                    </a>
-                    <a href=" {{ path('set_last_step', {'story_id': story.id, 'custom_id': step.getChoice2}) }} " class="bg-light col-lg-6 col-xs-12 card btn">
-                        <div class="p-3">
-                            <p class="text-dark">Choix 2:</p>
-                            <h3 class="text-justify">{{step.getLabelChoice2|raw}}</h3>
-                        </div>
-                    </a>
-                </div>
-            {% else %}
-                {% if step.getCustomId != "postscriptum" %}    
-                    <div class="row">
-                        <a href="{{ path('set_last_step', {'story_id': story.id, 'custom_id': "postscriptum"}) }}" class="btn button button-success mx-3 mb-3">
-                        <h2>Post-scriptum</h2></a>
+            <h1>{{story.title}}</h1>
+            {% if step != "" %}
+                <h3 class="text-justify">{{step.description|raw}}</h3>
+                {% if step.getFeaturedImage() != "" %}
+                <div class="row d-flex align-items-center justify-content-center">
+                    <div class="my-5 justify-content-center">
+                        <!-- openBigImageOverlay() open the overlay div -->
+                        <img src="{{asset('uploads/final-template-image/' ~ step.getFeaturedImage() )}}"
+                        alt="image du film {{step.getCustomId}}"
+                        class="stepImages btn"
+                        onclick="openBigImageOverlay()">
                     </div>
+                </div>
                 {% endif %}
+                {% if step.getChoice1 != "" %}
+                    <div class="row">
+                        <a href="{{ path('set_last_step', {'story_id': story.id, 'custom_id': step.getChoice1}) }}" class="bg-light col-lg-6 col-xs-12 card btn">
+                            <div class="p-3">
+                                <p class="text-dark">Choix 1:</p>
+                                <i class="fas fa-sign-out-alt"></i>
+                                <h3 class="text-justify">{{step.getLabelChoice1|raw}}</h3>
+                            </div>
+                        </a>
+                        <a href=" {{ path('set_last_step', {'story_id': story.id, 'custom_id': step.getChoice2}) }} " class="bg-light col-lg-6 col-xs-12 card btn">
+                            <div class="p-3">
+                                <p class="text-dark">Choix 2:</p>
+                                <h3 class="text-justify">{{step.getLabelChoice2|raw}}</h3>
+                            </div>
+                        </a>
+                    </div>
+                {% else %}
+                    {% if step.getCustomId != "postscriptum" %}    
+                        <div class="row">
+                            <a href="{{ path('set_last_step', {'story_id': story.id, 'custom_id': "postscriptum"}) }}" class="btn button button-success mx-3 mb-3">
+                            <h2>Post-scriptum</h2></a>
+                        </div>
+                    {% endif %}
+                {% endif %}
+            {% else %}
+                <div>Etapes non remplies</div>
             {% endif %}
-        {% else %}
-            <div>Etapes non remplies</div>
-        {% endif %}
+        </div>
+    </div>
+
+    <!-- Div with the full screen OVERLAY IMAGE -->
+    <div id="myNav" class="overlay">
+        <!-- Overlay content -->
+        <div class="overlay-content">
+            <!-- Button to close the overlay image -->
+            <a href="javascript:void(0)" class="closebtn" onclick="closeBigImageOverlay()">&times;</a>
+            <img
+            src="{{ asset( 'uploads/final-template-image/' ~ step.getFeaturedImage() ) }}"
+            alt="image du film {{step.getCustomId}}"
+            class="stepBigImages btn"
+            onclick="closeBigImageOverlay()">
+        </div>
+    </div>
+    
+    <script type="text/javascript">
+        
+        nav = document.getElementById("nav");
+        bigImage = document.getElementById("bigImageContainer");
+
+        function fullScreenImage() {
+            nav.style.display = "none";
+        }
+        function backToCurrentPage() {
+            nav.style.display = "block";
+        }
+
+        /* Open when someone clicks on the span element */
+        function openBigImageOverlay() {
+            document.getElementById("myNav").style.width = "100%";
+            fullScreenImage()
+        }
+        
+        /* Close when someone clicks on the "x" symbol inside the overlay */
+        function closeBigImageOverlay() {
+            document.getElementById("myNav").style.width = "0%";
+            backToCurrentPage();
+        }
+
+    </script>
+    {# If I succeed moving the script in his file I have to tell it in main.css #}
+    {# <script type="text/javascript" src="/scripts/fullScreenImage.js"></script> #}
 {% endblock %}
