--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,5 +1,39 @@
-<form method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<!-- <form
+    method="post"
+    action="{{ path('user_delete', {'id': user.id}) }}"
+    onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn button button-danger">Supprimer le compte</button>
-</form>
+    <button class="btn button button-danger">Suppr</button>
+</form> -->
+
+<!-- Button trigger modal -->
+<button type="button" class="btn button button-danger" data-toggle="modal" data-target="#exampleModal">
+    Supprimer mon compte
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-dark" id="exampleModalLabel">Compte</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body text-secondary">
+          Etes-vous sûr de vouloir supprimer votre compte?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+          <a
+          type="button"
+          class="btn btn-danger"
+          href="{{ path('user_delete', {'id': user.id}) }}">
+              Supprimer
+            </a>
+        </div>
+      </div>
+    </div>
+  </div>
