--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Modifier Profil</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/_form.html.twig', {'button_label': 'Modifier'}) }}
 
     <a href="{{ path('user_index') }}">back to list</a>
 
